Update homepage to use Markdown

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -124,7 +124,8 @@
 
     <!-- Content -->
     <main>
-        {% block content %}{% endblock %}
+        {% block content %}
+        {% endblock %}
     </main>
 
     <!-- Footer -->
