--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,8 +6,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}My Site{% endblock %}</title>
-    <link rel="stylesheet" href="{{ url_for('/frozen_flask_app/static', filename='style.css') }}">
-    <script src="{{ url_for('/frozen_flask_app/static', filename='jquery-3.7.1.js') }}"></script>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <script src="{{ url_for('static', filename='jquery-3.7.1.js') }}"></script>
     <script>
         $(function () {
             $("#b-more").click(function () {
