--- a/static/css/style.css
+++ b/static/css/style.css
@@ -34,7 +34,7 @@ body {
     font-family: 'Inter', 'Source Han Sans', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: bold;
     transition: all 0.2s;
-    background-image: url(../img/home-button-light.svg);
+    background-image: url(../image/home-button-light.svg);
 }
 
 #b-more {
@@ -301,6 +301,23 @@ body {
 
 /* element style */
 
+main {
+    margin-top: 70px;
+}
+
+main h1 {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 30px;
+}
+
+main h2 {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+main div {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 #copyright-info {
     font-family: 'Inter', 'Source Han Sans', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 15px;
@@ -560,7 +577,7 @@ nav {
     }
 
     #b-info {
-        background-image: url(../img/home-button-dark.svg) !important;
+        background-image: url(../image/home-button-dark.svg) !important;
     }
 
     #b-more {
