--- a/templates/layout.html
+++ b/templates/layout.html
@@ -39,78 +39,21 @@
             <a href="https://jerryly.top">
                 <div id="b-info"></div>
             </a>
+            <a href="https://blog.jerryly.top">
+                <div class="b-style"><i class="fas fa-chevron-right"></i>&emsp;blog</div>
+            </a>
             <div id="b-more"><b><i class="fas fa-chevron-right"></i>&emsp;<span id="titleDisplay"></span></b></div>
             <div class="b-style"><a href="#">to top</a></div>
-            <div class="b-style"><a href="./clock.html">clock</a></div>
-            <div class="b-style"><a href="./aluminum_studio.html">about</a></div>
+            <div class="b-style"><a href="">about</a></div>
         </div>
         <div id="cup">
             <div id="water">
                 <a href="./apple.html">
-                    <span id="water-head">9:41</span>
+                    <span id="water-head">Jerry's blog</span>
                 </a>
                 <ul id="water-list">
-                    <a href="./develop.html">
-                        <li>Developer</li>
-                    </a>
-                </ul>
-                <a href="./music.html">
-                    <span id="water-head">music</span>
-                </a>
-                <ul id="water-list">
-                    <a href="./taylorswift.html">
-                        <li>Taylor Swift</li>
-                    </a>
-                    <a href="./subpages/1989tv.html">
-                        <li>1989 (Taylor's Version)</li>
-                    </a>
-                    <a href="./subpages/lover.html">
-                        <li>Lover</li>
-                    </a>
-                    <a href="./subpages/midnights.html">
-                        <li>Midnights</li>
-                    </a>
-                    <a href="./subpages/ttpd.html">
-                        <li>The Tortured Poets Department</li>
-                    </a>
-                </ul>
-                <span id="water-head">other stuff</span>
-                <ul id="water-list">
-                    <a href="./aluminum_studio.html">
-                        <li>About</li>
-                    </a>
-                    <a href="./blog_preview.html">
-                        <li>Blog</li>
-                    </a>
-                    <a href="./christmas.html">
-                        <li>Christmas (closed for now)</li>
-                    </a>
-                    <a href="./classical_ch_sh.html">
-                        <li>部编版高中语文古文合集</li>
-                    </a>
-                    <a href="./classical_ch.html">
-                        <li>部编版初中语文古文合集</li>
-                    </a>
-                    <a href="./clock.html">
-                        <li>Clock</li>
-                    </a>
-                    <a href="./contact.html">
-                        <li>Contact</li>
-                    </a>
-                    <a href="./friends.html">
-                        <li><i>Friends</i></li>
-                    </a>
-                    <a href="./gallery.html">
-                        <li>Gallery</li>
-                    </a>
-                    <a href="./noticeboard.html">
-                        <li>Noticeboard</li>
-                    </a>
-                    <a href="./search.html">
-                        <li>Search (deprecated)</li>
-                    </a>
-                    <a href="./survey.html">
-                        <li>Survey</li>
+                    <a href="{{ url_for('page', path='blog_oct_4_2024') }}">
+                        <li>On October 4</li>
                     </a>
                 </ul>
             </div>
@@ -138,16 +81,11 @@
         </p>
         <p class="copyright-info">
             版权所有 © aluminum.studio
-            <a id="my-page" href="http://jerrylovescheese.github.io/web/pages/aluminum_studio.html">
+            <a id="my-page" href="http://jerryly.top/pages/aluminum_studio.html">
                 江源工作室 <i class="fas fa-arrow-right"></i>
             </a>
         </p>
         <p class="copyright-info">
-            <a href="javascript:;" onclick="alert('Currently no items in test. Stay tuned!')">
-                <i class="fas fa-flask"></i>&emsp13;
-                实验室
-            </a>
-            &emsp;
             <a href="https://blog.jerryly.top/2024/04/04/legal-statement.html">
                 <i class="fa-solid fa-scale-balanced"></i>&emsp13;
                 法律声明
