--- a/templates/layout.html
+++ b/templates/layout.html
@@ -49,21 +49,21 @@
         </div>
         <div id="cup">
             <div id="water">
-                <span id="water-head">Jerry's blog</span>
+                <span id="water-head">blogs in 2024</span>
                 <ul id="water-list">
                     <a href="{{ url_for('page', path='blog_oct_4_2024') }}">
-                        <li>On October 4</li>
+                        <li>On October 4, 2024</li>
+                    </a>
+                    <a href="{{ url_for('page', path='2024-06-04-visa-appointment-walk-through') }}">
+                        <li>On June 4, 2024</li>
+                    </a>
+                    <a href="{{ url_for('page', path='2024-04-04-legal-statement') }}">
+                        <li>On April 4, 2024</li>
                     </a>
                 </ul>
             </div>
         </div>
     </header>
-
-    <div id="header-collapse">
-        <div id="header-collapse-button">
-            <i class="fa-solid fa-square-caret-left"></i>&emsp13;&emsp13;导航器
-        </div>
-    </div>
 
     <!-- Content -->
     <main>
@@ -74,7 +74,7 @@
     <!-- Footer -->
     <footer id="copyright-info">
         <p class="copyright-info">
-            Feel free to mail any uggestions on this site to
+            Feel free to mail any suggestions on this site to
             <a href="mailto:jerrylovesapple@icloud.com">jerrylovesapple@icloud.com</a>.<br>
         </p>
         <p class="copyright-info">
