--- a/docs/static/css/style.css
+++ b/docs/static/css/style.css
@@ -306,6 +306,7 @@ main {
     margin-left: 10%;
     margin-right: 10%;
     min-height: calc(100vh - 90px);
+    overflow: hidden;
 }
 
 main h1 {
@@ -321,6 +322,13 @@ main div {
     font-family: 'Charter', 'Source Han Sans', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+main img {
+    width: 50%;
+    margin-left: 30%;
+    border-radius: 10px;
+    border: solid 1px #eee;
+}
+
 #copyright-info {
     height: 70px;
     font-family: 'Charter', 'Source Han Sans', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -333,6 +341,9 @@ main div {
     position: relative;
     overflow: hidden;
     padding: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .copyright-info {
@@ -588,8 +599,16 @@ nav {
         color: rgba(255, 255, 255, 0.5) !important;
     }
 
+    .b-style {
+        color: rgba(255, 255, 255, 0.5) !important;
+    }
+
     #cup {
         background-color: rgba(118, 118, 118, 0.5) !important;
+    }
+
+    main img {
+        border-color: #333;
     }
 
     #copyright-info {
