--- a/templates/layout.html
+++ b/templates/layout.html
@@ -61,6 +61,12 @@
                         <li>On April 4, 2024</li>
                     </a>
                 </ul>
+                <span id="water-head">notes</span>
+                <ul id="water-list">
+                    <a href="{{ url_for('page', path='cs2100_notes') }}">
+                        <li>Data Structure & Analysis</li>
+                    </a>
+                </ul>
             </div>
         </div>
     </header>
